Alignment fix for trust grid

--- a/src/_marquee.scss
+++ b/src/_marquee.scss
@@ -200,7 +200,7 @@ $skew: -15deg;
       position: relative;
       top: 50%;
       transform: translateY(-50%);
-      padding: 0.5rem 2.5rem 0.25rem 0;
+      padding: 0.5rem 1.5rem 0.25rem 0;
       max-height: 80px;
 
       @include breakpoint(small down){
